# Volleyball-League-Data-Scraping-Analytics-System

./: .env.test  .gitignore  .gitlab-ci.yml  CreateTable.sql  CreateTableRaw.sql  DatabaseBR.md  Makefile  Player_Stats.csv  README.md  api.yml  crawler.yml  genenv.py  local.ini  mysql.yml  portainer.yml  producer.py  pyproject.toml  pytest.ini  rabbitmq.yml  radar.py  tasks.py  vbcrawler.py  wait.py  worker.py
ETL_files/: ML_Player_Candidates.csv  ML_Player_National.csv  ML_Training_Data.csv  Match_Coach.csv  Match_Referee.csv  Match_Score.csv  Matches.csv  Player_Stats.csv  Players.csv  Radar_Data.csv
Linode/: portainer.sh  rabbitmq.sh  setup.sh  worker1.sh
api/: Dockerfile  main.py
dockerfile_backup/: Dockerfile(crawler)
ml/: attacker_model_men.pkl  attacker_model_women.pkl  prepare.py  recommendation.py
ml/data_prepare/: prepare.py
ml/model/: attacker_model_men.pkl  attacker_model_women.pkl  libero_model_men.pkl  libero_model_women.pkl  setter_model_men.pkl
ml/recommendation_result/: top10_potential_nat_attacker_men.csv  top10_potential_nat_attacker_women.csv
ml/training/: train_attacker_men_model.py  train_attacker_women_model.py  train_libero_men_model.py  train_libero_women_model.py  train_setter_men_model.py  train_setter_women_model.py
tests/: sample_html.html  test_main.py  test_pack.py  test_scrape_match.py  test_vbcrawler.py
volleyballdata/: __init__.py  clients.py  config.py  router.py  setup.py  vbcrawler.py
volleyballdata/ETL/: etl.py
volleyballdata/crawler/: vbcrawler.py
volleyballdata/database/: clients.py  db.py  router.py
volleyballdata/etl/: etl.py
volleyballdata/schema/: dataset.py
volleyballdata/sql/: CreateTableRaw.sql  PlayerPerformance.sql
volleyballdata/sql/data/: Match_Coach.sql  Match_Referee.sql  Match_Score.sql  Matches.sql  Player_Stats.sql  Players.sql
volleyballdata/tasks/: __init__.py  tasks.py  worker.py
