[tool.poetry]
name = "volleyball-data-project"
version = "0.1.0"
description = "Analyze player indicators in the Taiwan volleyball league by scraping data from a publicly accessible website"
authors = ["HHsieh09 <henryfbs01@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = "2.0.1"
pandas = "1.1.5"
requests = "2.25.1"
pydantic = "1.8.1"
loguru = "0.5.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
