[tool.poetry]
name = "volleyballdata"
version = "0.1.0"
description = "Analyze player indicators in the Taiwan volleyball league by scraping data from a publicly accessible website"
authors = ["HHsieh09 <henryfbs01@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = "2.0.1"
pandas = "1.1.5"
requests = "2.25.1"
pydantic = "1.8.1"
loguru = "0.5.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
pytest = "^8.3.5"
sqlalchemy = "^2.0.39"
pymysql = "^1.1.1"
sync = "^1.0.0"
cryptography = "42.0.0"
worker = "^2018.4.1"
celery = "^5.4.0"
amqp = "^5.3.1"
kombu = "^5.5.1"
fastapi = "0.63.0"
uvicorn = "0.14.0"
pytest-cov = "2.11.1"
pytest-mock = "3.5.1"
scikit-learn = "1.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

